# birdseye-semseg

./: .gitignore  README.md  conda_env.yml  environment.yml  torch_geometric.md
carla_explorer/: CMakeLists.txt  package.xml
carla_explorer/include/: transform_conversions.h
carla_explorer/launch/: carla_explorer.launch
carla_explorer/src/: main.cpp  transform_conversions.cpp
docker/: Dockerfile
freicar_data_collector/: .ccls  .clang-tidy  CMakeLists.txt  package.xml
freicar_data_collector/freicar_carla_proxy/: CMakeLists.txt
freicar_data_collector/include/: hdf5_dataset.h
freicar_data_collector/include/carla_agent/: carla_agent.h  sensor_structs.h
freicar_data_collector/include/carla_proxy/: agent_config.h  carla_proxy.h  sensor_structs.h
freicar_data_collector/param/: sensors.yaml
freicar_data_collector/src/: hdf5_dataset.cpp  main.cpp
freicar_data_collector/src/carla_agent/: carla_agent.cpp
freicar_data_collector/src/carla_proxy/: freicar_carla_proxy.cpp  main.cpp
freicar_data_collector/src/hdf5_api/: hdf5_dataset.cpp  hdf5_lib_example.cpp  hdf5_test.cpp
freicar_data_collector/src/mass_agent/: mass_agent.cpp
mass_data_collector/: .clang-tidy  CMakeLists.txt  package.xml
mass_data_collector/cloud_viewer/: cloud_viewer.cpp
mass_data_collector/include/: data_collection.h
mass_data_collector/include/config/: agent_config.h  geom_config.h
mass_data_collector/include/geometry/: camera.h  camera_geomtry.h  pointcloud.h  semantic_cloud.h  surface_map.h
mass_data_collector/include/hdf5_api/: hdf5_dataset.h
mass_data_collector/include/mass_agent/: agent_config.h  mass_agent.h  sensor_structs.h  sensors.h
mass_data_collector/param/: camera_grid.yaml  data_collection.yaml  dimensions.yaml  runtime.yaml  sc_settings.yaml  sensors.yaml  vehicle_dimensions.yaml
mass_data_collector/src/: main.cpp  runtime.cpp
mass_data_collector/src/config/: agent_config.cpp  geom_config.cpp
mass_data_collector/src/geometry/: camera.cpp  camera_geometry.cpp  pointcloud.cpp  semantic_cloud.cpp
mass_data_collector/src/hdf5_api/: hdf5_dataset.cpp  hdf5_test.cpp
mass_data_collector/src/mass_agent/: mass_agent.cpp  sensors.cpp
mass_data_collector/src/visualizer/: mviz.cpp
scripts/: README.md  calculate_ce_weights.py  data_test.py  distributed_train.py  dual_train.py  dual_train4x.py  evaluate.py  evaluate_runtime.py  evalute.py  generate_wandb_report.py  gnn-test.py  gui.py  lie_stresstest.py  mask_train.py  pull_models.py  sem_train.py  test_transform_loss.py  todo  train.py  transform_train.py  triple_train.py  wandb_report.py
scripts/agent/: agent_pool.py
scripts/config/: evaluation.yml  report.yml  training.yml
scripts/data/: color_map.py  config.py  dataloader.py  dataset.py  dist.py  logging.py  mask_warp.py  utils.py
scripts/map/: occupancy_gridmap.py
scripts/metrics/: inference_time.py  iou.py  noise.py
scripts/model/: base.py  dual_mcnn.py  factory.py  fast_scnn.py  graph_bevnet.py  large_mcnn.py  maskcnn.py  mass_cnn.py  mass_cnn_small.py  mcnn.py  noisy_mcnn.py  se3_attention.py  slim_mcnn.py
scripts/model/lie_so3/: Makefile  build.py  lie_so3_f.py  lie_so3_m.py
scripts/model/lie_so3/src/: lie_so3.cu  lie_so3.h  lie_so3_module_cuda.h
scripts/model/modules/lie_so3/: Makefile  build.py  lie_so3_m.py  lie_test.py
scripts/model/modules/lie_so3/src/: lie_so3_module_cuda.cpp
scripts/model/pyrocc/: README.md  classifier.py  fpn.py  pyramid.py  pyrocc.py  resampler.py  topdown.py  transformer.py
scripts/models/: fast_scnn.py  gemoetric.py  mass_cnn.py
scripts/models/agent/: agent_pool.py  mass_cnn.py
scripts/models/gnn/: mass_agent.py
