<?xml version="1.0"?>
<package format="2">
  <name>freicar_carla_proxy</name>
  <version>0.0.0</version>
  <description>egocar sim proxy package</description>

  <maintainer email="johan@vertens.de">johan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>freicar_common</depend>
  <depend>raiscar_msgs</depend>

  <!-- forcing this build because it's usually launched before this node-->
  <build_depend>freicar_setting</build_depend>

</package>
