<?xml version="1.0"?>
<package format="2">
  <name>mass_data_collector</name>
  <version>0.0.0</version>
  <description>package for collecting aerial semseg data</description>
  <maintainer email="mh.bhdrn@gmail.com">hosein</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <!-- <depend>freicar_map</depend> -->

  <!-- forcing this build because it's usually launched before this node-->
  <!-- <build_depend>freicar_setting</build_depend> -->

</package>
